# Miinaharava

./: CMakeLists.txt  Kaytto-ohjeet.txt  README.md  Tunnit.txt  aihemaarittely.txt  build.bash  build.sh
cmake_modules/: FindSFML.cmake
dokumentaatio/html/: _app_8h_source.html  _app_state_8h_source.html  _app_state_classic_8h_source.html  _app_state_manager_8h_source.html  _app_state_menu_8h_source.html  _app_state_splash_screen_8h_source.html  _behavior_8h_source.html  _drawable_8h_source.html  _drawable_sprite_8h_source.html  _drawable_text_rectangle_8h_source.html  _entity_8h_source.html  _entity_manager_8h_source.html  _grid_behavior_8h_source.html  _grid_entity_8h_source.html  _lin_gen_8h_source.html  _menu_behavior_8h_source.html  _menu_drawable_8h_source.html  _menu_g_u_i_behavior_8h_source.html  _menu_g_u_i_entity_8h_source.html  _menu_state_entity_8h_source.html  _parameters_8h_source.html  _splash_screen_behavior_8h_source.html  _splash_screen_drawable_8h_source.html  _splash_screen_entity_8h_source.html  _splash_screen_sprite_entity_8h_source.html  _text_rectangle_entity_8h_source.html  _texture_manager_8h_source.html  _tile_drawable_sprite_8h_source.html  _tile_entity_8h_source.html  _tile_state_8h_source.html  _tile_state_covered_8h_source.html  _tile_state_flagged_8h_source.html  _tile_state_manager_8h_source.html  _tile_state_peek_8h_source.html  _tile_state_uncertain_8h_source.html  _tile_state_uncovered_8h_source.html  _win_drawable_8h_source.html  _win_entity_8h_source.html  annotated.html  class_app-members.html  (+87 more)
dokumentaatio/html/search/: all_61.js  all_63.js  all_64.js  all_65.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_70.js  all_73.js  all_74.js  all_75.js  classes_61.js  classes_62.js  classes_64.js  classes_67.js  classes_6c.js  classes_6d.js  classes_73.js  classes_74.js  classes_77.js  functions_61.js  functions_64.js  functions_65.js  functions_67.js  functions_68.js  functions_69.js  functions_6c.js  functions_6d.js  functions_6f.js  functions_70.js  functions_72.js  functions_73.js  functions_74.js  functions_75.js  search.js
project/src/: main.cpp
project/src/engine/: App.cpp  App.h  AppState.h  AppStateManager.cpp  AppStateManager.h  Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  TextureManager.cpp  TextureManager.h
project/src/game/: AppStateMenu.cpp  AppStateMenu.h  AppStateSplashScreen.cpp  AppStateSplashScreen.h  GridBehavior.cpp  GridBehavior.h  SplashScreenBehavior.cpp  SplashScreenBehavior.h  SplashScreenDrawable.cpp  SplashScreenEntity.h
project/unitTests/: AppStateManagerTest.cpp
source/: main.cpp
src/: Parameters.txt  config.h  main.cpp
src/engine/: App.cpp  App.h  AppState.cpp  AppState.h  AppStateManager.cpp  AppStateManager.h  Behavior.cpp  Behavior.h  Drawable.cpp  Drawable.h  DrawableSprite.cpp  DrawableSprite.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  TextureManager.cpp  TextureManager.h  stdincl.h
src/game/: AppStateClassic.cpp  AppStateClassic.h  AppStateMenu.cpp  AppStateMenu.h  AppStateSplashScreen.cpp  AppStateSplashScreen.h  DrawableTextRectangle.cpp  DrawableTextRectangle.h  GridBehavior.cpp  GridBehavior.h  GridEntity.cpp  GridEntity.h  MenuBehavior.cpp  MenuBehavior.h  MenuDrawable.cpp  MenuDrawable.h  MenuGUIBehavior.cpp  MenuGUIBehavior.h  MenuGUIEntity.cpp  MenuGUIEntity.h  MenuStateEntity.cpp  MenuStateEntity.h  Parameters.cpp  Parameters.h  SplashScreenBehavior.cpp  SplashScreenBehavior.h  SplashScreenDrawable.cpp  SplashScreenDrawable.h  SplashScreenEntity.cpp  SplashScreenEntity.h  SplashScreenSpriteEntity.cpp  SplashScreenSpriteEntity.h  TextRectangleEntity.cpp  TextRectangleEntity.h  TileBehavior.cpp  TileBehavior.h  TileDrawableSprite.cpp  TileDrawableSprite.h  TileEntity.cpp  TileEntity.h  (+18 more)
src/unitTests/: AppStateManagerTest.cpp  EntityManagerTest.cpp  GridBehaviorTest.cpp  GridBehaviorTest.cpp~  TextureManagerTest.cpp  TileStateManagerTest.cpp
src/utilities/: LinGen.cpp  LinGen.h
